src/views/Kanban/Kanban.module.css
.kanban {
  display: flex;
  gap: 1rem;
  height: 100%;
}
.kanban > div {
  flex: 1;
}
.buttons {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.buttons > button {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  border: none;
  background: none;
}
/* Mobile View */
@media screen and (max-width: 768px) {
  .kanban {
    flex-direction: column;
  }
}

